[package]
name = "gpt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.2"
dotenv = "0.15.0"
reqwest = {version="0.11.16", features=["blocking"]}
serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.27.0", features = ["full"]}
